--- a/Morrow_pythonHelloInput.html
+++ b/Morrow_pythonHelloInput.html
@@ -23,7 +23,7 @@ operandOne = float(input_box.value)
         <form>
             <label for="operandOne">X:</label><input name="operandOne" id="opoerandOne" value="10">
 
-            <lavel for="total">Result:</label><div name="total"id="total"></div>
+            <label for="total">Result:</label><div name="total"id="total"></div>
         </form>
         <py-script>
         input_box = Element("operandOne")
